// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Element adds the fontWeightBold modifier 1`] = `
.c0 {
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<label
  className="c0"
>
  Label
</label>
`;

exports[`Label Element adds the italicize modifier 1`] = `
.c0 {
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
  font-style: italic;
}

<label
  className="c0"
>
  Label
</label>
`;

exports[`Label Element renders correctly 1`] = `
.c0 {
  color: #646464;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

<label
  className="c0"
>
  Label
</label>
`;
